--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,59 @@
 </head>
 <body>
 
-     <header class="hero">
-
+     <header class="hero section wrapper">
+          <div class="hero__background flex-centered">
+               <img data-bgImage class="hero__background__image" src="./assets/images/dark_clouds_min.jpeg" alt="dark clouds background image">
+          </div>
+          <div class="hero__content">
+               <div class="hero__content__text">
+                    <div>
+                         <a class="target text-block text-block--marged" href="https://pureemaison.com/" target="_blank" rel="noopener noreferrer">
+                              <div class="text-block__line">
+                                   <span class="text-block__line__inner">purée maison</span>
+                              </div>
+                              <div class="text-block__line">
+                                   <span class="text-block__line__inner">www.pureemaison.com</span>
+                              </div>
+                         </a>
+                         <div class="text-block">
+                              <h2 class="text-block__line">
+                                   <span class="text-block__line__inner">developer exercice</span>
+                              </h2>
+                              <h2 class="text-block__line">
+                                   <span class="text-block__line__inner">skill test 2021</span>     
+                              </h2>
+                         </div>
+                    </div>
+                    <div class="text-block text-block--right">
+                         <div class="text-block__line">
+                              <span class="text-block__line__inner">test duration</span>
+                         </div>
+                         <div class="text-block__line">
+                              <span class="text-block__line__inner">/24 hours</span>
+                         </div>
+                    </div>
+               </div>
+               <div class="flex-centered">
+                    <h1 class="hero__content__title">exercice n°<span class="hidden-text">002</span></h1>
+               </div>
+               <div class="flex-centered">
+                    <div class="hero__content__scroll-button flex-centered">
+                         <svg width="9" height="13" viewBox="0 0 9 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <g clip-path="url(#clip0)">
+                                   <path d="M3.69146 12.1053L5.31909 12.1053L5.31909 -1.90735e-06L3.69146 -2.04964e-06L3.69146 12.1053Z" fill="black"/>
+                                   <path d="M9.00003 8.16611L7.84912 6.92978L3.3491 11.7638L4.50002 13.0001L9.00003 8.16611Z" fill="black"/>
+                                   <path d="M4.49997 12.9999L5.65088 11.7636L1.15087 6.92963L-4.47906e-05 8.16595L4.49997 12.9999Z" fill="black"/>
+                              </g>
+                              <defs>
+                                   <clipPath id="clip0">
+                                        <rect width="9" height="13" fill="white" transform="translate(9 13) rotate(-180)"/>
+                                   </clipPath>
+                              </defs>
+                         </svg>                              
+                    </div>
+               </div>
+          </div>
      </header>
 
      <main class="content">
