--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
-     <header class="hero section wrapper">
-          <div class="hero__background flex-centered">
-               <img data-bgImage class="hero__background__image" src="./assets/images/dark_clouds_min.jpeg" alt="dark clouds background image">
+     <header class="hero section">
+          <div data-clipped-background class="hero__background flex-centered">
+               <div class="hero__background__container">
+                    <img data-background-image class="hero__background__image" src="./assets/images/dark_clouds_min.jpeg" alt="dark clouds background image">
+               </div>
           </div>
-          <div class="hero__content">
+          <div class="hero__content wrapper">
                <div class="hero__content__text">
                     <div>
                          <a class="target text-block text-block--marged" href="https://pureemaison.com/" target="_blank" rel="noopener noreferrer">
@@ -45,19 +47,23 @@
                     <h1 class="hero__content__title">exercice n°<span class="hidden-text">002</span></h1>
                </div>
                <div class="flex-centered">
-                    <div class="hero__content__scroll-button flex-centered">
-                         <svg width="9" height="13" viewBox="0 0 9 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <g clip-path="url(#clip0)">
-                                   <path d="M3.69146 12.1053L5.31909 12.1053L5.31909 -1.90735e-06L3.69146 -2.04964e-06L3.69146 12.1053Z" fill="black"/>
-                                   <path d="M9.00003 8.16611L7.84912 6.92978L3.3491 11.7638L4.50002 13.0001L9.00003 8.16611Z" fill="black"/>
-                                   <path d="M4.49997 12.9999L5.65088 11.7636L1.15087 6.92963L-4.47906e-05 8.16595L4.49997 12.9999Z" fill="black"/>
-                              </g>
-                              <defs>
-                                   <clipPath id="clip0">
-                                        <rect width="9" height="13" fill="white" transform="translate(9 13) rotate(-180)"/>
-                                   </clipPath>
-                              </defs>
-                         </svg>                              
+                    <div data-link data-link-react class="circle-button hero__content__scroll-button">
+                         <div class="circle-button__content">
+                              <span data-link-text class="circle-button__content__text">scroll</span>
+                              <svg data-link-icon class="circle-button__content__icon" width="9" height="13" viewBox="0 0 9 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                   <g clip-path="url(#clip0)">
+                                        <path d="M3.69146 12.1053L5.31909 12.1053L5.31909 -1.90735e-06L3.69146 -2.04964e-06L3.69146 12.1053Z" fill="black"/>
+                                        <path d="M9.00003 8.16611L7.84912 6.92978L3.3491 11.7638L4.50002 13.0001L9.00003 8.16611Z" fill="black"/>
+                                        <path d="M4.49997 12.9999L5.65088 11.7636L1.15087 6.92963L-4.47906e-05 8.16595L4.49997 12.9999Z" fill="black"/>
+                                   </g>
+                                   <defs>
+                                        <clipPath id="clip0">
+                                             <rect width="9" height="13" fill="white" transform="translate(9 13) rotate(-180)"/>
+                                        </clipPath>
+                                   </defs>
+                              </svg>
+                         </div>
+                         <div data-link-shape class="circle-button__circle"></div>
                     </div>
                </div>
           </div>
@@ -66,6 +72,12 @@
      <main class="content">
 
      </main>
+
+     <div data-cursor class="cursor">
+          <svg class="cursor__svg" width="174" height="174" viewBox="0 0 174 174" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <circle data-cursor-shape cx="87" cy="87" r="45" stroke="white"/>
+          </svg>
+     </div>
 
 </body>
 </html>
