--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
                     </div>
                </div>
                <div class="flex-centered">
-                    <h1 class="hero__content__title">exercice n°<span class="hidden-text">002</span></h1>
+                    <h1 data-loader-target data-anim-skew-opacity data-title class="hero__content__title">exercice n°</h1>
+                    <div data-loader class="loader">0</div>
                </div>
                <div class="flex-centered">
                     <div data-link data-link-react class="circle-button hero__content__scroll-button">
