factoring the animation of SVG shapes into an independent and reusable class

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
      </main>
 
      <div data-cursor class="cursor">
-          <svg class="cursor__svg" width="174" height="174" viewBox="0 0 174 174" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg data-cursor-svg class="cursor__svg" width="174" height="174" viewBox="0 0 174 174" fill="none" xmlns="http://www.w3.org/2000/svg">
                <circle data-cursor-shape cx="87" cy="87" r="45" stroke="white"/>
           </svg>
      </div>
