loader sticky to title animation

--- a/src/index.html
+++ b/src/index.html
@@ -46,15 +46,16 @@
                 </div>
             </div>
             <div class="flex-centered">
-                <h1 data-loader-target data-anim-skew-opacity data-hero-title class="hero__content__title">
+                <h1 data-anim-skew-opacity data-hero-title class="hero__content__title">
                     <span data-hero-title-content class="hero__content__title__content">exercice n°</span>
+                    <span data-loader-target class="hero__content__title__content hidden">002</span>
                     <span data-hero-title-border class="hero__content__title__border"></span>
                 </h1>
                 <div data-loader class="loader">
                     <div data-loader-mask class="loader__mask">
                         <div data-loader-roller class="loader__roller">
                             <span data-loader-item data-loader-percent class="loader__item">0</span>
-                            <span data-loader-item data-loader-content class="loader__item">02</span>
+                            <span data-loader-item data-loader-content class="loader__item">002</span>
                         </div>
                     </div>
                 </div>
